; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ips.c_ips_proc_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_ips.c_ips_proc_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i64 }

@.str = private unnamed_addr constant [14 x i8] c"ips_proc_info\00", align 1
@ips_next_controller = common dso_local global i32 0, align 4
@ips_sh = common dso_local global %struct.Scsi_Host** null, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Scsi_Host*, i8*, i8**, i32, i32, i32)* @ips_proc_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ips_proc_info(%struct.Scsi_Host* %0, i8* %1, i8** %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.Scsi_Host*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8** %2, i8*** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* null, i32** %16, align 8
  %17 = call i32 @METHOD_TRACE(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 0, i32* %14, align 4
  br label %18

18:                                               ; preds = %48, %6
  %19 = load i32, i32* %14, align 4
  %20 = load i32, i32* @ips_next_controller, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %51

22:                                               ; preds = %18
  %23 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %24 = load i32, i32* %14, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %23, i64 %25
  %27 = load %struct.Scsi_Host*, %struct.Scsi_Host** %26, align 8
  %28 = icmp ne %struct.Scsi_Host* %27, null
  br i1 %28, label %29, label %47

29:                                               ; preds = %22
  %30 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %31 = load i32, i32* %14, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %30, i64 %32
  %34 = load %struct.Scsi_Host*, %struct.Scsi_Host** %33, align 8
  %35 = load %struct.Scsi_Host*, %struct.Scsi_Host** %8, align 8
  %36 = icmp eq %struct.Scsi_Host* %34, %35
  br i1 %36, label %37, label %46

37:                                               ; preds = %29
  %38 = load %struct.Scsi_Host**, %struct.Scsi_Host*** @ips_sh, align 8
  %39 = load i32, i32* %14, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds %struct.Scsi_Host*, %struct.Scsi_Host** %38, i64 %40
  %42 = load %struct.Scsi_Host*, %struct.Scsi_Host** %41, align 8
  %43 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = inttoptr i64 %44 to i32*
  store i32* %45, i32** %16, align 8
  br label %51

46:                                               ; preds = %29
  br label %47

47:                                               ; preds = %46, %22
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %14, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %14, align 4
  br label %18

51:                                               ; preds = %37, %18
  %52 = load i32*, i32** %16, align 8
  %53 = icmp ne i32* %52, null
  br i1 %53, label %57, label %54

54:                                               ; preds = %51
  %55 = load i32, i32* @EINVAL, align 4
  %56 = sub nsw i32 0, %55
  store i32 %56, i32* %7, align 4
  br label %74

57:                                               ; preds = %51
  %58 = load i32, i32* %13, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %61

60:                                               ; preds = %57
  store i32 0, i32* %7, align 4
  br label %74

61:                                               ; preds = %57
  %62 = load i8**, i8*** %10, align 8
  %63 = icmp ne i8** %62, null
  br i1 %63, label %64, label %67

64:                                               ; preds = %61
  %65 = load i8*, i8** %9, align 8
  %66 = load i8**, i8*** %10, align 8
  store i8* %65, i8** %66, align 8
  br label %67

67:                                               ; preds = %64, %61
  %68 = load i32*, i32** %16, align 8
  %69 = load i8*, i8** %9, align 8
  %70 = load i32, i32* %11, align 4
  %71 = load i32, i32* %12, align 4
  %72 = call i32 @ips_host_info(i32* %68, i8* %69, i32 %70, i32 %71)
  store i32 %72, i32* %15, align 4
  %73 = load i32, i32* %15, align 4
  store i32 %73, i32* %7, align 4
  br label %74

74:                                               ; preds = %67, %60, %54
  %75 = load i32, i32* %7, align 4
  ret i32 %75
}

declare dso_local i32 @METHOD_TRACE(i8*, i32) #1

declare dso_local i32 @ips_host_info(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
